--- a/testA/2 模板语法.html
+++ b/testA/2 模板语法.html
@@ -28,7 +28,7 @@
     </div>
 </body>
 <!-- 引入线上的Vue -->
-<script src="../vue.js"></script>
+<script src="./vue.js"></script>
 <script>
     // 创建vue实例
      const vm = new Vue({ //配置对象
@@ -38,7 +38,7 @@
              msgb:'sajdjanj',
              msgc:'5',
              msgd:'<a href="www.baidu.com">dinji</a>',
-             imgurl:'http://www.gulixueyuan.com/themes/june/img/logo-green1.png?version=8.3.2'
+             imgurl:'https://cn.vuejs.org/images/logo.png'
          },
          methods: {
             test() {
