--- a/testA/4 强制绑定class与style.html
+++ b/testA/4 强制绑定class与style.html
@@ -31,7 +31,7 @@
     </div>
 </body>
 <!-- 引入线上的Vue -->
-<script src="../vue.js"></script>
+<script src="./vue.js"></script>
 <script>
     // 创建vue实例
      const vm = new Vue({ //配置对象
