--- a/testA/3 计算属性和监视.html
+++ b/testA/3 计算属性和监视.html
@@ -18,7 +18,7 @@
         姓名双向： <input type="text" placeholder="姓" v-model="xm3">
     </div>
 </body>
-<script src="../vue.js"></script>
+<script src="./vue.js"></script>
 <script>
     const vm = new Vue({
         el: '#app',
